GEOMESA-282 Change the namespace to org.locationtech.geomesa
Included some import re-ordering.